eks/day17-rbac/hrms-db-placeholder.yaml
# hrms-db-placeholder.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hrms-db
  namespace: rbac-demo
  labels:
    app: hrms-db
spec:
  containers:
  - name: postgres
    image: postgres:16-alpine
    ports:
    - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: hrms-db
  namespace: rbac-demo
spec:
  selector:
    app: hrms-db
  ports:
  - port: 5432
    targetPort: 5432
