eks/day17-rbac/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrms-ingress
  namespace: devops-training
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
      - path: /payroll
        pathType: Prefix
        backend:
          service:
            name: payroll-service
            port:
              number: 80
      - path: /attendance
        pathType: Prefix
        backend:
          service:
            name: attendance-service
            port:
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
